examples/test/testpolicy5873.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5873
  namespace: namespace330
spec:
  podSelector:
    matchLabels:
      key9: value47
      key32: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value41
          key32: value42
      podSelector:
        matchLabels:
          key25: value24
          key39: value3
          key32: value14
